--- a/mouse.template/config.json
+++ b/mouse.template/config.json
@@ -2,5 +2,5 @@
     "special_variables": ["site_title","navbar"],
     "variables": ["page_title", "title", "content", "extra", "navbar", "content"],
     "variables_files": {"content":"content.skel.html","navbar":"navbar.skel.json"},
-    "content": {"variables":["text", "title", "link"], "defaults": {"link":"content", "text":"","title":""}}
+    "content": {"variables":["text", "title", "link","date"], "defaults": {"link":"content", "text":"","title":"","date":""}}
 }
